--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.js' version '1.4-M1'
+    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
 }
 
 group 'org.example'
@@ -10,14 +10,50 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-js"
-}
-
 kotlin {
-    target {
-        nodejs { }
-        produceExecutable()
+    /* Targets declarations omitted */
+
+    sourceSets {
+        commonMain {
+            dependencies {
+                implementation kotlin('stdlib-common')
+            }
+        }
+        commonTest {
+            dependencies {
+                implementation kotlin('test-common')
+                implementation kotlin('test-annotations-common')
+            }
+        }
+
+        // Default source set for JVM-specific sources and dependencies.
+        // Alternatively, jvmMain { ... } would work as well:
+        jvm().compilations.main.defaultSourceSet {
+            dependencies {
+                implementation kotlin('stdlib-jdk8')
+            }
+        }
+        // JVM-specific tests and their dependencies:
+        jvm().compilations.test.defaultSourceSet {
+            dependencies {
+                implementation kotlin('test-junit')
+            }
+        }
+
+        //TODO: these arent run by default.. gotta do some convoluted shit https://discuss.kotlinlang.org/t/not-able-to-run-unit-tests-on-kotlin-multiplatform-project/15779
+        js("nodeJs").compilations.main.defaultSourceSet  {
+            dependencies {
+                implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
+            }
+        }
+        js("nodeJs").compilations.test.defaultSourceSet {
+            dependencies {
+                implementation "org.jetbrains.kotlin:kotlin-test-js"
+            }
+        }
+
+        //TODO:
+        mingwX64('mingw').compilations.main.defaultSourceSet { /* ... */ }
+        mingwX64('mingw').compilations.test.defaultSourceSet { /* ... */ }
     }
 }
