--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@ pluginManagement {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
-rootProject.name = 'typesafe-xpath'
+rootProject.name = 'xpath builder'
 
