--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: gradle tests
       uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-14
+      with:
+        args: [jvmTest, mingwX64Test]
