--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,4 @@ jobs:
     - name: gradle tests
       uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-14
       with:
-        args: [jvmTest, mingwX64Test]
+        args: jvmTest mingwX64Test
