--- a/.github/workflows/todo checker.yaml
+++ b/.github/workflows/todo checker.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: "actions/checkout@master"
       - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@v1.2-beta"
+        uses: "alstr/todo-to-issue-action@master"
         with:
           REPO: ${{ github.repository }}
           BEFORE: ${{ github.event.before }}
