forgot to change template to gradle lol.

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,8 +11,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm install
-          npm run build
+          gradle dokkaJekyll
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
