--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,12 +11,12 @@ jobs:
 
       - name: Install and Build
         run: |
-          gradle dokkaJekyll
+          gradle dokkaHtml
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build/dokka/jekyll/kotlinxpath # The folder the action should deploy.
+          FOLDER: build/dokka/html/kotlinxpath # The folder the action should deploy.
           CLEAN: true # Automatically remove deleted files from the deploy branch
