--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build/dokka/html/kotlinxpath # The folder the action should deploy.
+          FOLDER: build/dokka/html # The folder the action should deploy.
           CLEAN: true # Automatically remove deleted files from the deploy branch
